syntax = "proto2";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package tutorial;

option java_multiple_files = false;
option java_package = "com.example.tutorial.protos";
option java_outer_classname = "AddressBookProtos";

message Person {
  optional string name = 1;
  optional int32 id = 2;
  optional string email = 3;

  enum PhoneType {
    PHONE_TYPE_UNSPECIFIED = 0;
    PHONE_TYPE_MOBILE = 1;
    PHONE_TYPE_HOME = 2;
    PHONE_TYPE_WORK = 3;
  }

  message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2 [default = PHONE_TYPE_HOME];
  }

  repeated PhoneNumber phones = 4;
}

message AddressBook {
  optional int32 id = 1;
  repeated Person people = 2;
}

service AddressBookService {
  rpc GetAddressBooks(google.protobuf.Empty) returns (stream AddressBook);
  rpc GetAddressBook(google.protobuf.Int32Value) returns (AddressBook);
  rpc CreateAddressBook(AddressBook) returns (google.protobuf.Int32Value);
  rpc DeleteAddressBook(google.protobuf.Int32Value) returns (google.protobuf.Empty);
}
